{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "78cfde59-f37e-4244-8c4a-d7e1686739f3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0ccdba91-feec-498d-b500-0a10fbd72588",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "df047488-70a3-4a4a-aead-2bb8ff2f3644",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5179bcc7-ad8e-45d1-9664-b0593515c2e8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "670044e7-83a6-4b2d-9fa3-a5e3212db0c0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Personal Computer(x64)",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4b54b2b7-ab9a-4812-9515-994a23322b6c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Personal Computer(x64)",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2d160e18-d404-4ef6-be80-972ce19116a1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Personal Computer(x64)",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a500fe89-06db-428d-b7a5-8abce463d013",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Personal Computer(x64)",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b64b8e9a-234a-4f49-8842-8241537489ee",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Personal Computer(x64)",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Personal Computer(x64)",
            "bindingGroup": "Personal Computer(x64)",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": []
        }
    ]
}